# YATL

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: usage.en.md  usage.ru.md
integration_tests/: codeforces.yatl.yaml
src/yatl/: __init__.py  __main__.py  extractor.py  request_builder.py  run.py  validator.py
src/yatl/utils/: __init__.py  base_utils.py  file_utils.py
tests/: test_render.py  test_run.py  test_validator.py
